# OpenBlade

./: .gitignore  .judge_beta_auth.db  .yamllint  AGENTS.md  BUILD-PLAN.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  openblade.db  pyproject.toml  reset-check.db
.github/: copilot-instructions.md
.github/instructions/: api.instructions.md  fuse.instructions.md  robot.instructions.md  simulator.instructions.md  tests.instructions.md
.github/workflows/: auto-merge-trusted.yml  ci.yml  copilot-setup-steps.yml  emulator-change-gates.yml  hardware-library-smoke.yml  i3-emulator-compliance.yml  operability.yml  wiki-validate.yml
.judge-alpha-auth/: adminreset.db  judge.db  judge2.db  ldapmode.db  mfa.db  role2.db  wrongpw.db
.judge_gamma_auth/: auth.db
compatibility/: README.md
deploy/: Dockerfile  docker-compose.yml  example-config.yaml
deploy/emulator/: Dockerfile.local  docker-compose.standalone.yml
docs/: api-compatibility-matrix.md  api.md  architecture.md  assistant.md  controller-isolation-report.md  deployment.md  disaster-recovery.md  fuse.md  generate_inventory.py  hardware-setup.md  monitoring.md  production-readiness-roadmap.md  safety.md  sharding.md  simulator.md  single-points-of-failure.md  tech-debt.md  test-plan.md
docs/decisions/: expert-debate-shipping-strategy.md
docs/diagrams/: data-flow.md  shard-design.md  system-architecture.md
docs/reference/: i3-contract-notes.md
docs/runbooks/: import-existing-ltfs-tape.md  recover-from-dirty-unmount.md  (+2 more)
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
openblade/: __init__.py  bootstrap.py  config.py  config_validation.py  deploy.py  dr.py  topology.py
scripts/: backup_db.py  deploy.py  dev_bootstrap.sh  generate_test_media.py  mvp_e2e_demo.py  restore_verify.py  run_mock_demo.sh  smoke_real_hardware_readonly.sh  validate_config.py  validate_runtime.py  verify_topology.py  wiki_validate.py
tests/: conftest.py
(+480 files in other folders)
