[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openblade"
version = "0.1.0"
description = "OpenBlade DIY tape archive controller with simulator-first safety model"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "OpenBlade contributors"}]
dependencies = [
  "fastapi>=0.115",
  "a2wsgi>=1.10",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2",
  "aiosqlite>=0.20",
  "structlog>=24.1",
  "httpx>=0.27",
  "pyotp>=2.9",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.112",
  "ruff>=0.6",
  "mypy>=1.11",
  "asyncssh>=2.21",
  "pyfakefs>=5.6",
  "pyyaml>=6",
]

[project.scripts]
openblade = "openblade.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["openblade"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "A", "SIM"]
# A002 (argument shadows a builtin) is ignored: FastAPI path/query params like
# `id`, `type`, `filter` ARE the wire contract — renaming them would break the
# /aml endpoints (see docs/tech-debt.md).
ignore = ["A002", "A004", "B008", "B017", "E402", "E501", "UP017", "UP042", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tests/hardware/*" = ["SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "real_hardware: tests requiring actual tape hardware",
  "slow: long-running simulator stress tests",
  "i3: Quantum i3 emulator and protocol tests",
  "real_i3: tests requiring a physical Quantum Scalar i3",
]
